[package]
name = "bevy_blendy_cameras"
version = "0.2.0"
edition = "2021"
authors = ["Xavier Thomas"]
description = "Bevy editor like cameras controls for Pan/Orbit/Zoom and Fly mode. Switch mode, set camera viewpoint and frame view around entities"
keywords = ["gamedev", "bevy", "orbit", "fly", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thmxv/bevy_blendy_cameras"
homepage = "https://github.com/thmxv/bevy_blendy_cameras"
readme = "README.md"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_render", "bevy_winit"] }
bevy_egui = { version = "0.28", optional = true, default-features = false }
bevy_mod_raycast = { version = "0.18" }
winit = "0.30"

[dev-dependencies]
bevy = { version = "0.14" }
