[package]
name = "bevy_blendy_cameras"
version = "0.3.1"
edition = "2021"
authors = ["Xavier Thomas"]
description = "Bevy editor like cameras controls for Pan/Orbit/Zoom and Fly mode. Switch mode, set camera viewpoint and frame view around entities"
keywords = ["gamedev", "bevy", "orbit", "fly", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thmxv/bevy_blendy_cameras"
homepage = "https://github.com/thmxv/bevy_blendy_cameras"
readme = "README.md"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_winit"
] }
bevy_egui = { version = "0.28", optional = true, default-features = false }
bevy_mod_raycast = { version = "0.18" }
winit = "0.30"

[dev-dependencies]
bevy = { version = "0.14" }
bevy_egui = { version = "0.28", default-features = false, features = [
    "render",
    "default_fonts",
] }
egui_dock = "0.13"

[[example]]
name = "egui_full"
required-features = ["bevy_egui"]
